# AgentPre

./: .gitignore  README.md  pyproject.toml
assets/articraft/rec_microwave_oven_5e86f3429e954dcd9ab6c9d3a94db707/: affordances.json  inertials.json  source.json
assets/microwave/: affordances.json  microwave.urdf
configs/: articraft_microwave_franka.json  microwave_franka.json  upper_agent_policy.json
outputs/: README.md
reports/: VALIDATION_REPORT.md
scripts/: apply_articraft_inertials.py  build_articraft_asset.sh  env.sh  fetch_assets.py  install_sync_cron.sh  install_sync_daemon.sh  materialize_articraft_asset.py  run_example.sh  setup_articraft_env.sh  setup_env.sh  sync_daemon.sh  sync_to_github.sh
src/: __init__.py  affordances.py  agent_cli.py  animation.py  asset_inspector.py  asset_semantics.py  collision.py  config.py  door_kinematics.py  errors.py  ik_objectives.py  metrics.py  newton_backend.py  output.py  physics_assisted.py  proxy_inertials.py  render_video.py  run.py  trajectory.py  transforms.py  urdf_model.py
tests/: test_affordances.py  test_agent_cli.py  test_animation.py  test_apply_articraft_inertials.py  test_asset_inspector.py  test_asset_semantics.py  test_collision.py  test_config_output.py  test_door_trajectory.py  test_materialize_articraft_asset.py  test_metrics.py  test_newton_backend_helpers.py  test_physics_assisted.py  test_proxy_inertials.py  test_render_video.py  test_run.py  test_sync_daemon.py  test_sync_to_github.py  test_transforms.py
