[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentpre"
version = "0.1.0"
description = "Deterministic Newton pipeline for opening an articulated microwave with a Franka arm"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "numpy>=1.26,<3",
  "newton==1.3.0",
  "warp-lang==1.14.0",
  "GitPython>=3.1.47",
  "trimesh>=4.6.8",
  "scipy>=1.11",
  "pycollada>=0.9",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools]
packages = ["src"]
